--- a/src/LogbookServiceClient/LogbookServiceClient/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/src/LogbookServiceClient/LogbookServiceClient/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -10,8 +10,7 @@
 
 <p id="external-login-description" class="text-info">
     You've successfully authenticated with <strong>@Model.ProviderDisplayName</strong>.
-    Please enter an email address for this site below and click the Register button to finish
-    logging in.
+    Please click the Register button to finish logging in.
 </p>
 
 <div class="row">
@@ -19,8 +18,10 @@
         <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="email" />
+                <!-- I want the input to be readonly -->
+                <input asp-for="Input.Email" class="form-control" autocomplete="email" readonly />
                 <label asp-for="Input.Email" class="form-label"></label>
+                <br>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
